--- a/html/francais.index.html
+++ b/html/francais.index.html
@@ -77,9 +77,10 @@
             <p class="col-12 policeRegular">Ce portfolio a pour but de me pr&eacute;senter ainsi que de vous montrer les diff&eacute;rents projets que j&rsquo;ai r&eacute;alis&eacute; durant mon cursus scolaire.</p>
             <p class="col-12 policeRegular">Titulaire du permis de conduire et v&eacute;hicul&eacute;. Je suis mobile g&eacute;ographiquement.</p>
             <p class="col-12 policeRegular">thomas.noeson@gmail.com<br>07.70.32.91.79</p>
-            <!-- Lien CV & Linkedin -->
-            <p class="col-12 left"><a href="../pdf/CVDevWeb.pdf" target="_blank" class="CVDownload WhiteSmoke policeRegular">Consulter mon CV</a></p>
-            <p class="col-12 left"><a href="https://www.linkedin.com/in/thomas-noeson/" target="_blank" class="LinkedinDownload WhiteSmoke policeRegular">Consulter mon Linkedin</a></p>
+            <!-- Lien Code source -->
+            <p class="left" style="margin-bottom:15px;"><a href="../pdf/CVDevWeb.pdf" target="_blank" class="CVDownload WhiteSmoke policeRegular">Consulter mon CV</a></p>
+            <p class="left" style="margin-top:15px;"><a href="https://www.linkedin.com/in/thomas-noeson/" target="_blank" class="LinkedinDownload WhiteSmoke policeRegular">Consulter mon Linkedin</a></p>
+
         </div>
         <!-- Photo À Propos -->
         <div class="row col-xs-4 col-sm-4">
