Portfolio Français Fini

--- a/html/anglais.index.html
+++ b/html/anglais.index.html
@@ -13,15 +13,12 @@
 </head>
 
 <body>
-    <header>
-        <div class="banner row" id="banner" style="width: 1292px; height: 676px;">
-            <div class="container-fluid row col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
-              <!--background slide show start-->
-              <div class="bannerPart"> 
-                  <img src="../img/banner.jpg" alt="" class="bgwidth"> 
-                </div>
-              <!--background slide show end-->
-            </div>
-          </div>
-    </header>
+
+<div class="container-fluid h-100 p-0">
+    <img alt="banniere" class="flou fixed-top index" src="../img/banner.png">
+
+    <h2 style="margin-top:10%;" class="ColorBlack policeBold center col-12">Prochainement.. en développement</h2>
+</div>
+
 </body>
+
