--- a/html/francais.index.html
+++ b/html/francais.index.html
@@ -46,7 +46,7 @@
             </li>
             <li class="nav-item">
                 <!-- Onglet Navbar -->
-                <a class="nav-link text-white policeBold" href="#cont" id="contact">Contact</a>
+                <a class="nav-link text-white policeBold" href="#cont" id="contact">Contacts</a>
             </li>
         </ul>
     </div>
@@ -78,8 +78,8 @@
             <p class="col-12 policeRegular">Titulaire du permis de conduire et v&eacute;hicul&eacute;. Je suis mobile g&eacute;ographiquement.</p>
             <p class="col-12 policeRegular">thomas.noeson@gmail.com<br>07.70.32.91.79</p>
             <!-- Lien Code source -->
-            <p class="left" style="margin-bottom:35px;"><a href="../pdf/CVDevWeb.pdf" target="_blank" class="CVDownload WhiteSmoke policeRegular">Consulter mon CV</a></p>
-            <p class="left" style="margin-top:35px;"><a href="https://www.linkedin.com/in/thomas-noeson/" target="_blank" class="LinkedinDownload WhiteSmoke policeRegular">Consulter mon Linkedin</a></p>
+            <p class="left" style="margin-bottom:25px;"><a href="../pdf/CVDevWeb.pdf" target="_blank" class="CVDownload WhiteSmoke policeRegular">Consulter mon CV</a></p>
+            <p class="left" style="margin-top:25px;"><a href="https://www.linkedin.com/in/thomas-noeson/" target="_blank" class="LinkedinDownload WhiteSmoke policeRegular">Consulter mon Linkedin</a></p>
 
         </div>
         <!-- Photo À Propos -->
@@ -239,22 +239,48 @@
         </div>
     </div>
 
-    <div class="ColorBackNav" id="cont">
-        <h2 class="text-white nav-link policeBold center">Contact</h2>
-        <div clas="row col-12 center">
+    <!-- Contact -->
+    <div class="row background-white m-4 Bordure" id="cont">
+        <h2 class="ColorOrange policeBold center">Contacts<br><span class="policeRegular center" style="color:darkgray; font-size:15px;">Si vous voulez en savoir davantage sur ce développeur, contactez-le !</span></h2>
+        <!-- Box contact -->
+        <div class="row col-12 center">
+            <!-- Box Adresse -->
             <div class="row center col-md-3">
-                <h2 class="nav-link">DÉTAILS</h2>
+                <div class="col-12 bordureC center text-center policeBold">
+                    <p class="comp">ADRESSE</p>
+                    <hr style="height: 2px; color: #f16c5b; background-color: #f16c5b; width: 20%; border: none;">
+                    <p class="policeRegular"><a style="color:dimgrey;" href="https://www.google.fr/maps/place/Billy-Montigny/@50.4151792,2.8979962,15z/data=!3m1!4b1!4m5!3m4!1s0x47dd33954d5811c3:0x40af13e8163fcc0!8m2!3d50.415238!4d2.906792" target="_blank">Billy-Montigny, 62420</a></p>
+                </div>
             </div>
+            <!-- Box Telephone -->
             <div class="row center col-md-3">
-                <h2 class="nav-link">CENTRE D'INTÉRÊTS</h2>
+                <div class="col-12 bordureC center text-center policeBold">
+                    <p class="comp">TÉLÉPHONE</p>
+                    <hr style="height: 2px; color: #f16c5b; background-color: #f16c5b; width: 20%; border: none;">
+                    <p class="policeRegular"><a style="color:dimgrey;" href="tel:+33770329179">07.70.32.91.79</a></p>
+                </div>
             </div>
+            <!-- Box Adresse mail -->
             <div class="row center col-md-3">
-                <h2 class="nav-link">DIVERS</h2>
+                <div class="col-12 bordureC center text-center policeBold">
+                    <p class="comp">ADRESSE EMAIL</p>
+                    <hr style="height: 2px; color: #f16c5b; background-color: #f16c5b; width: 20%; border: none;">
+                    <p class="policeRegular"><a style="color:dimgrey;" href="mailto:thomas.noeson@gmail.com">thomas.noeson@gmail.com</a></p>
+                </div>
             </div>
+            <!-- Box Linkedin -->
             <div class="row center col-md-3">
-                <h2 class="nav-link">Des Questions ?</h2>
+                <div class="col-12 bordureC center text-center policeBold">
+                    <p class="comp">LINKEDIN</p>
+                    <hr style="height: 2px; color: #f16c5b; background-color: #f16c5b; width: 20%; border: none;">
+                    <p class="policeRegular"><a style="color:dimgrey;" href="https://www.linkedin.com/in/thomas-noeson/" target="_blank" >Thomas Noeson</a></p>
+                </div>
             </div>
         </div>
+    </div>
+
+    <div class="ColorBackNav">
+        <h2 class="text-white nav-link policeBold center">Thomas Noeson</h2>
     </div>
 </div>
 
