--- a/html/siteweb.index.html
+++ b/html/siteweb.index.html
@@ -33,7 +33,7 @@
                 </p>
                 <p class="ColorBlack policeRegular">Pour la réalisation nous avons utilisé ici les <span class="policeBold">langages HTML & CSS</span> ainsi que le <span class="policeBold">framework Bootstrap</span>.</p>
                 <!-- Lien Code source -->
-                <p class="left" style="margin-bottom:25px; padding-top: 3%;"><a href="https://github.com/ThomasNoeson/SiteWeb_IUT" target="_blank" class="ConsulterCode WhiteSmoke policeRegular">Consulter le code source</a></p>
+                <p class="left" style="margin-bottom:25px;"><a href="https://github.com/ThomasNoeson/SiteWeb_IUT" target="_blank" class="ConsulterCode WhiteSmoke policeRegular">Consulter le code source</a></p>
                 <p class="left" style="margin-top:25px;"><a href="https://thomasnoeson.github.io/SiteWeb_IUT/" target="_blank" class="ConsulterCode WhiteSmoke policeRegular">Consulter le site web</a></p>
             </div>
         </div>
