--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-     Fin Contenu de la page -->
+     <!-- Fin Contenu de la page -->
 
     <script>
 
