Amélioration balise META des pages HTML

--- a/html/siteweb.index.html
+++ b/html/siteweb.index.html
@@ -8,7 +8,9 @@
     <link href="../css/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Refonte d'un site web</title>
+    <meta name="author" content="Thomas Noeson">
+    <meta name="description" content="Plus d'information sur le projet Refonte d'un site web.">
+    <title>Portfolio Thomas Noeson - Refonte d'un site web</title>
 </head>
 
 <body>
