--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link href="css/style2.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Choix de la langue</title>
+    <meta name="description" content="Portfolio de Thomas Noeson">
+    <meta name="keywords" content="Portfolio, Noeson, Thomas, Thomas Noeson, Noeson Thomas">
+    <meta name="author" content="Thomas Noeson">
+    <title>Portfolio Thomas Noeson - Choix de la langue</title>
 </head>
 
 <body>
