--- a/html/anglais.index.html
+++ b/html/anglais.index.html
@@ -9,7 +9,10 @@
     <link href="../css/timeline.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Thomas Noeson</title>
+    <meta name="description" content="Portfolio de Thomas Noeson en anglais.">
+    <meta name="keywords" content="Portfolio, Noeson, Thomas, Thomas Noeson, Noeson Thomas">
+    <meta name="author" content="Thomas Noeson">
+    <title>Portfolio Thomas Noeson - Anglais</title>
 </head>
 
 <body>
