--- a/html/francais.index.html
+++ b/html/francais.index.html
@@ -8,7 +8,10 @@
     <link href="../css/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Thomas Noeson</title>
+    <meta name="description" content="Portfolio de Thomas Noeson en français.">
+    <meta name="keywords" content="Portfolio, Noeson, Thomas, Thomas Noeson, Noeson Thomas">
+    <meta name="author" content="Thomas Noeson">
+    <title>Portfolio Thomas Noeson - Français</title>
 </head>
 
 <body>
