--- a/html/portal.index.html
+++ b/html/portal.index.html
@@ -8,7 +8,9 @@
     <link href="../css/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>"Portal 2"</title>
+    <meta name="author" content="Thomas Noeson">
+    <meta name="description" content="Plus d'information sur le projet Portal 2.">
+    <title>Portfolio Thomas Noeson - "Portal 2"</title>
 </head>
 
 <body>
