--- a/html/telegestion.index.html
+++ b/html/telegestion.index.html
@@ -8,7 +8,9 @@
     <link href="../css/style.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Télégestion d'une serre</title>
+    <meta name="author" content="Thomas Noeson">
+    <meta name="description" content="Plus d'information sur le projet Telegestion d'une serre.">
+    <title>Portfolio Thomas Noeson - Télégestion d'une serre</title>
 </head>
 
 <body>
